src/nesper/esp/driver_v5/i2c_slave.nim


proc i2c_new_slave_device*(slave_config: ptr i2c_slave_config_t;
                           ret_handle: ptr i2c_slave_dev_handle_t): esp_err_t {.
    cdecl, importc: "i2c_new_slave_device", header: "i2c_slave.h".}
##
##  @brief Set I2C slave event callbacks for I2C slave channel.
##
##  @note User can deregister a previously registered callback by calling this function and setting the callback member in the `cbs` structure to NULL.
##  @note When CONFIG_I2C_ISR_IRAM_SAFE is enabled, the callback itself and functions called by it should be placed in IRAM.
##        The variables used in the function should be in the SRAM as well. The `user_data` should also reside in SRAM.
##
##  @param[in] i2c_slave I2C slave device handle that created by `i2c_new_slave_device`.
##  @param[in] cbs Group of callback functions
##  @param[in] user_data User data, which will be passed to callback functions directly
##  @return
##       - ESP_OK: Set I2C transaction callbacks successfully
##       - ESP_ERR_INVALID_ARG: Set I2C transaction callbacks failed because of invalid argument
##       - ESP_FAIL: Set I2C transaction callbacks failed because of other error
##

proc i2c_slave_register_event_callbacks*(i2c_slave: i2c_slave_dev_handle_t;
    cbs: ptr i2c_slave_event_callbacks_t; user_data: pointer): esp_err_t {.
    cdecl, importc: "i2c_slave_register_event_callbacks", header: "i2c_slave.h".}
##
##  @brief Deinitialize the I2C slave device
##
##  @param[in] i2c_slave I2C slave device handle that created by `i2c_new_slave_device`.
##  @return
##       - ESP_OK: Delete I2C device successfully.
##       - ESP_ERR_INVALID_ARG: I2C device initialization failed because of invalid argument.
##

proc i2c_del_slave_device*(i2c_slave: i2c_slave_dev_handle_t): esp_err_t {.
    cdecl, importc: "i2c_del_slave_device", header: "i2c_slave.h".}